--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "create-react-jetstream",
   "private": false,
-  "version": "1.0.0",
-  "description": "A React template inspired by Laravel Jetstream, using Tailwind CSS for styling, providing a comprehensive starting point for building modern web applications.",
+  "version": "1.4.3",
+  "description": "React starter kit inspired by Laravel Jetstream, with Tailwind CSS for modern styling.",
   "type": "module",
   "author": "calvin-kimani <github.com/calvin-kimani>",
   "bin": {
-    "create-react-jetstream": "./bin/cli.js"
+    "create-react-jetstream": "./bin/cli.cjs"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/calvin-kimani/create-react-jetstream.git"
+    "url": "git+https://github.com/calvin-kimani/react-jetstream.git"
   },
   "bugs": {
-    "url": "https://github.com/calvin-kimani/create-react-jetstream/issues"
+    "url": "https://github.com/calvin-kimani/react-jetstream/issues"
   },
   "engines": {
     "node": "^18.0.0 || >=20.0.0"
   },
-  "homepage": "https://github.com/calvin-kimani/create-react-jetstream#readme",
+  "homepage": "https://github.com/calvin-kimani/react-jetstream#readme",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
